Fixed wrapping 3rd nav
* fixes the wrapping of tertiary nav
* still an issue with the nav-threshold for pages like /cloud

--- a/static/sass/_pattern_navigation.scss
+++ b/static/sass/_pattern_navigation.scss
@@ -221,6 +221,7 @@
       background: $color-light;
       border-bottom: 1px solid $color-mid-light;
       padding: $sp-x-small 0 $sp-small;
+      white-space: nowrap;
 
       .p-breadcrumbs__item {
         margin-bottom: 0;
@@ -347,8 +348,15 @@
     white-space: normal;
     width: 85%;
 
-    .p-inline-list__item {
-      font-size: .875rem;
+    .p-inline-list {
+
+      &__item {
+        font-size: .875rem;
+      }
+
+      &__link {
+        padding-left: $sp-medium;
+      }
     }
 
     @media (max-width: $breakpoint-medium - 1) {
